hphp/hack/test/typecheck/reified_generics/circular_type_in_reified_call.php.exp
File "circular_type_in_reified_call.php", line 6, characters 14-20:
Cyclic type constant:
  `Foo::TFilter` -> `Foo::TFilter` (Typing[4131])
